deploy/releases/0.4.0/readme.adoc
= Open Liberty Operator v0.4.0

== Changelog

All notable changes are documented in the link:++/CHANGELOG.md#0.4.0++[Changelog].

== Installation

The Open Liberty Operator can be installed to:

* watch own namespace
* watch another namespace
* watch multiple namespaces
* watch all namespaces in the cluster

Appropriate cluster role and binding are required to watch another namespace, watch multiple namespaces or watch all namespaces.

---

. Install Custom Resource Definitions (CRDs) for `OpenLibertyApplication` and day-2 operations `OpenLibertyTrace` and `OpenLibertyDump`. This needs to be done only ONCE per cluster:
+
[source,sh]
----
    kubectl apply -f https://raw.githubusercontent.com/OpenLiberty/open-liberty-operator/master/deploy/releases/0.4.0/openliberty-app-crd.yaml
----

. Install the Open Liberty Operator:

.. Set operator namespace and the namespace to watch:
+
NOTE: Ensure that you replace `<SPECIFY_OPERATOR_NAMESPACE_HERE>` and `<SPECIFY_WATCH_NAMESPACE_HERE>` with proper values
+
  * To watch all namespaces in the cluster, set `WATCH_NAMESPACE='""'`
  * To watch multiple namespaces in the cluster, set `WATCH_NAMESPACE` to a comma-separated list of namespaces e.g. `WATCH_NAMESPACE=my-liberty-ns-1,my-liberty-ns-2,my-liberty-ns-3`
+

[source,sh]
----
    OPERATOR_NAMESPACE=<SPECIFY_OPERATOR_NAMESPACE_HERE>
    WATCH_NAMESPACE=<SPECIFY_WATCH_NAMESPACE_HERE>
----

.. _Optional_: Install cluster-level role-based access. This step can be skipped if the operator is only watching own namespace:
+
[source,sh]
----
    curl -L https://raw.githubusercontent.com/OpenLiberty/open-liberty-operator/master/deploy/releases/0.4.0/openliberty-app-cluster-rbac.yaml \
      | sed -e "s/OPEN_LIBERTY_OPERATOR_NAMESPACE/${OPERATOR_NAMESPACE}/" \
      | kubectl apply -f -
----

.. Install the operator:
+
[source,sh]
----
    curl -L https://raw.githubusercontent.com/OpenLiberty/open-liberty-operator/master/deploy/releases/0.4.0/openliberty-app-operator.yaml \
      | sed -e "s/OPEN_LIBERTY_WATCH_NAMESPACE/${WATCH_NAMESPACE}/" \
      | kubectl apply -n ${OPERATOR_NAMESPACE} -f -
----

== Uninstallation

To uninstall the operator, run commands from Step 2.3 first and then Step 2.2 (if applicable), but after replacing `kubectl apply` with `kubectl delete`.

To delete the CRD, run command from Step 1, but after replacing `kubectl apply` with `kubectl delete`.

_Deleting the CRD will also delete all `OpenLibertyApplication` in the cluster_

== Current Limitations

* Knative support is limited. Values specified for `autoscaling`, `resources` and `replicas` parameters would not apply for Knative when enabled using `createKnativeService` parameter.
* The auto-creation of an application definition by kAppNav is not supported when Knative is enabled.
* Monitoring feature does not support integration with Knative Service. Prometheus Operator is required to use ServiceMonitor.
* After the initial deployment of the `OpenLibertyApplication` custom resource (CR), any changes to its labels would be applied only when one of the parameters from the `spec` element is updated.
* Updating the value of an existing key in the `Secret` for SSO is not propagated to the application by the Kubernetes Deployment. Delete the key-value pair, save the SSO secret, add the key back with the new value, and then save the SSO secret again.

== Known Issues

* Auto scaling does not work as expected. The changes made to `Deployment` by `Horizontal Pod Autoscaler` are reversed. (link:++https://github.com/application-stacks/runtime-component-operator/issues/68++[#68])
* Operator might crash on startup when optional CRDs API group (eg. serving.knative.dev/v1alpha1) is available, but actual CRD (Knative Service) is not present. (link:++https://github.com/application-stacks/runtime-component-operator/issues/66++[#66])